2010-07-22  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Fix inspector console tests crashes.

        * bindings/v8/ScriptValue.cpp:
        (WebCore::v8ToInspectorValue):
        (WebCore::ScriptValue::toInspectorValue): enter v8 context before calling GetPropertyNames

2010-07-22  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Unreviewed build fix.

        [EFL] Build break for SVN r63881
        https://bugs.webkit.org/show_bug.cgi?id=42813

        * CMakeLists.txt: Add platform/SchemeRegistry.cpp

2010-07-22  Hayato Ito  <hayato@chromium.org>

        Reviewed by Darin Adler.

        Refactor CSSSelector's destructor and make it inline.

        https://bugs.webkit.org/show_bug.cgi?id=42726

        Refactor with no behavior change, thus no new tests.

        * css/CSSSelector.cpp:
        (WebCore::CSSSelectorBag::~CSSSelectorBag): Make sure the bag is empty.
        (WebCore::CSSSelectorBag::add): Renamed from append().
        (WebCore::CSSSelector::releaseOwnedSelectorsToBag):
        (WebCore::CSSSelector::deleteReachableSelectors):
        * css/CSSSelector.h:
        (WebCore::CSSSelector::~CSSSelector):

2010-07-22  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: should be possible to convert console message arguments to InspectorValues
        https://bugs.webkit.org/show_bug.cgi?id=42457

        Now it is possible to convert simple JavaScript objects to
        InspectorValues.

        * bindings/js/ScriptValue.cpp:
        (WebCore::jsToInspectorValue):
        (WebCore::ScriptValue::toInspectorValue):
        * bindings/js/ScriptValue.h:
        * bindings/v8/ScriptValue.cpp:
        (WebCore::v8ToInspectorValue):
        (WebCore::ScriptValue::toInspectorValue):
        * bindings/v8/ScriptValue.h:
        * inspector/ConsoleMessage.cpp: console notifications are pushed to RemoteInspectorFrontend instead of InspectorFrontend.